--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,4 @@
-# Learn more https://docs.github.com/en/get-started/getting-started-with-git/ignoring-files
-
-# dependencies
-node_modules/
-
-# Expo
-.expo/
-dist/
-web-build/
-expo-env.d.ts
-
-# Native
-.kotlin/
-*.orig.*
-*.jks
-*.p8
-*.p12
-*.key
-*.mobileprovision# ===========================
+# ===========================
 # DEPENDENCIES
 # ===========================
 node_modules/
@@ -32,6 +14,11 @@ expo-env.d.ts
 
 # Metro
 .metro-health-check*
+
+!frontend/assets/model/
+!frontend/utils/
+!frontend/app/
+
 
 # ===========================
 # ENV FILES
@@ -83,28 +70,3 @@ yarn-error.*
 
 # If you use any auto-generated sample folder
 app-example
-
-
-# Metro
-.metro-health-check*
-
-# debug
-npm-debug.*
-yarn-debug.*
-yarn-error.*
-
-# macOS
-.DS_Store
-*.pem
-
-# local env files
-.env*.local
-
-# typescript
-*.tsbuildinfo
-
-app-example
-
-# generated native folders
-/ios
-/android
